[package]
name = "liminal"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = "1.0.98"
askama = "0.14.0"
askama_web = { version = "0.14.4", features = ["rocket-0.5"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dashmap = "6.1.0"
data-encoding = "2.9.0"
ed25519-dalek = "2.1.1"
futures-lite = "2.6.0"
indicatif = "0.18.0"

n0-snafu = "0.2.1"
postcard = "1.1.2"
rand = "0.8.0"
redb = "2.4.0"
rocket = { version = "0.5.1", features = [
    "secrets",
    "json",
    "mtls",
    "serde_json",
    "tls",
] }

rust-embed = { version = "8.7.2", features = ["rocket"] }
serde = "1.0.219"
snafu = "0.8.6"
tokio = { version = "1.45.1", features = ["io-util", "sync"] }
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

fs-tree = { path = "crates/fs-tree" }
iroh-smol-kv = { path = "crates/iroh-small-kv" }
# iroh bits 
iroh = { version = "0.91.1", features = ["discovery-local-network"] }
iroh-blobs = "0.93.0"
iroh-gossip = "0.91.0"
iroh-docs = "0.91.0"

n0-watcher = "0.3.0"
n0-future = "0.2.0"

serde_json = "1.0.142"
markdown = { version = "1.0.0", features = ["serde"] }
irpc = "0.7.0"
irpc-iroh = "0.7.0"
tracing = "0.1.41"

[workspace]
members = ["crates/*"]
