[package]
name = "finder"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = "0.95.1"
iroh-blobs = "0.97.0"
iroh-gossip = "0.95.0"
uuid = { version = "1.20.0", features = ["serde", "v4", "v8"] }
moka = { version = "0.12.12", features = ["future"] }
tokio = { version = "1.45.1", features = ["io-util", "sync"] }
n0-error = "0.1.3"
n0-snafu = "0.2.2"
n0-future = "0.3.2"
bytes = "1.11.0"
postcard = "1.1.3"
serde = "1.0.228"
serde_derive = "1.0.228"
ed25519-dalek = "2.2.0"
