[package]
name = "findoid"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = "0.95.1"
iroh-blobs = "0.97.0"
iroh-gossip = "0.95.0"
toml = "0.9.11"
snafu = "0.8.6"
tokio = { version = "1.45.1", features = ["io-util", "sync"] }
tracing-subscriber = "0.3.19"
finder = { path = "../../crates/finder"}
clap = "4.5.54"
clap_derive = "4.5.49"
n0-error = "0.1.3"
serde = "1.0.228"
serde_derive = "1.0.228"
tracing = "0.1.44"
rand = "0.9.2"
n0-future = "0.3.2"
bytes = "1.11.0"
iroh-tickets = "0.2.0"
